--- a/iot-server/public/inputrecord.html
+++ b/iot-server/public/inputrecord.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>JSON POSTer</title>
   <script src="javascripts/inputrecord.js" defer></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
