--- a/iot-server/public/signup.html
+++ b/iot-server/public/signup.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="stylesheets/StrongPass.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
@@ -18,44 +18,41 @@
             <span>Account Registration</span>
           </div>
           <div class="card-body">
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon1">Email</span>
-              <input type="email" id="email" name="email" class="form-control" aria-describedby="basic-addon1">
-            </div>
-            <br>
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon2">Full Name</span>
-              <input type="text" id="fullName" name="fullName" class="form-control" aria-describedby="basic-addon2">
-            </div>
-            <br>
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon3">Password</span>
-              <input type="password" id="password" name="password" class="form-control" aria-describedby="basic-addon3">
-            </div>
-            <br>
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon4">Confirm Password</span>
-              <input type="password" id="passwordConfirm" name="passwordConfirm" class="form-control" aria-describedby="basic-addon4">
-            </div>
-            <br>
-            <div class="row">
-              <div class="col">
-                <a id="signup" class="btn btn-outline-primary" href="#" role="button">Register</a>
+            <form>
+              <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" id="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
-              <div class="col">
-                <div id="account">Have an account? <a href="signin.html">Sign In</a></div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
               </div>
-            </div>
+              <div class="form-group">
+                <label for="passwordConfirm">Confirm Password</label>
+                <input type="password" class="form-control" id="passwordConfirm" placeholder="Confirm Password">
+              </div>
+              <div class="row">
+                <div class="col">
+                  <a id="signup" class="btn btn-outline-primary" href="#" role="button">Register</a>
+                </div>
+                <div class="col">
+                  <div id="account">Have an account? <a href="signin.html">Sign In</a></div>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
       <div class="col-3"></div>
     </div>
     <!-- Optional JavaScript -->
-    <script src="javascripts/signup.js" defer></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="javascripts/mootools-nocompat.js"></script> <!-- for StrongPass.js-->
+    <script src="javascripts/signup.js" defer></script>
+    <script src="javascripts/StrongPass.js" defer></script>
   </body>
 </html>
