--- a/iot-server/public/signup.html
+++ b/iot-server/public/signup.html
@@ -25,6 +25,10 @@
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
               <div class="form-group">
+                <label for="fullName">Full Name</label>
+                <input type="text" id="fullName" name="fullName" class="form-control" placeholder="Enter your name">
+              </div>
+              <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Password">
               </div>
@@ -43,6 +47,7 @@
             </form>
           </div>
         </div>
+        <div class="alert alert-danger" role="alert" id="ServerResponse" style="display: none"></div>
       </div>
       <div class="col-3"></div>
     </div>
