feat: add signin and signout functions.

--- a/iot-server/public/signin.html
+++ b/iot-server/public/signin.html
@@ -39,6 +39,7 @@
             </form>
           </div>
         </div>
+        <div class="alert alert-danger" role="alert" id="ServerResponse" style="display: none"></div>
       </div>
       <div class="col-3"></div>
     </div>
