feat: add actions UI for device ID table.

--- a/iot-server/public/home.html
+++ b/iot-server/public/home.html
@@ -36,9 +36,10 @@
             <span>Devices</span>
           </div>
           <div class="card-body">
-            <table id="deviceTable" class="table table-hover table-dark table-striped table-bordered">
+            <table id="deviceTable" class="table table-hover table-dark table-bordered">
               <thead>
                 <tr>
+                  <th scope="col"></th>
                   <th scope="col">Device ID</th>
                   <th scope="col">API KEY</th>
                 </tr>
