feat: apply responsive designs.

--- a/iot-server/public/home.html
+++ b/iot-server/public/home.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <div class="row">
-      <div class="col-3"></div>
-      <div class="col-6">
+      <div class="col-lg-3 col-xs-1"></div>
+      <div class="col-lg-6 col-xs-10">
         <div class="row">
           <div class="col">
-            <a href="home.html">SunSmart - Home!</a>
+            <a href="home.html" class="btn btn-outline-info" role="button">SunSmart - Home!</a>
           </div>
           <div class="col">
             <a id="signout" class="btn btn-outline-danger float-right" href="#" role="button">Sign out</a>
@@ -36,7 +36,7 @@
             <span>Devices</span>
           </div>
           <div class="card-body">
-            <table id="deviceTable" class="table table-hover table-dark table-bordered">
+            <table id="deviceTable" class="table table-bordered table-condensed table-responsive">
               <thead>
                 <tr>
                   <th scope="col"></th>
@@ -58,7 +58,7 @@
         </div>
         <div class="alert alert-danger" role="alert" id="error"></div>
       </div>
-      <div class="col-3"></div>
+      <div class="col-lg-3 col-xs-1"></div>
     </div>
 
 
