--- a/iot-server/public/signup.html
+++ b/iot-server/public/signup.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div class="row">
-      <div class="col-3"></div>
-      <div class="col-6">
+      <div class="col-lg-3 col-xs-1"></div>
+      <div class="col-lg-6 col-xs-10">
         <div class="card">
           <div class="card-header">
             <span>Account Registration</span>
@@ -49,7 +49,7 @@
         </div>
         <div class="alert alert-danger" role="alert" id="ServerResponse" style="display: none"></div>
       </div>
-      <div class="col-3"></div>
+      <div class="col-lg-3 col-xs-1"></div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
