feat: apply account information edit function.

--- a/iot-server/public/home.html
+++ b/iot-server/public/home.html
@@ -29,6 +29,11 @@
             <p>Email: <span id="email"></span></p>
             <p>Name: <span id="fullName"></span></p>
             <p>Last Access: <span id="lastAccess"></span></p>
+            <a id="editUserInfo" href="#" class="btn btn-outline-warning btn-sm" role="button">Edit</a>
+            <div id="confirmEditUserInfo">
+              <a href="#" class="btn btn-primary btn-sm" role="button">Done</a>
+              <a href="#" class="btn btn-danger btn-sm" role="button">Cancel</a>
+            </div>
           </div>
         </div>
         <div class="card">
