--- a/iot-server/public/signup.html
+++ b/iot-server/public/signup.html
@@ -57,6 +57,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script src="javascripts/mootools-nocompat.js"></script> <!-- for StrongPass.js-->
+    <script src="javascripts/utility.js" defer></script>
     <script src="javascripts/signup.js" defer></script>
     <script src="javascripts/StrongPass.js" defer></script>
   </body>
