feat: require an APIKEY from the IoT device to post record.

--- a/iot-server/public/inputrecord.html
+++ b/iot-server/public/inputrecord.html
@@ -20,7 +20,8 @@
           <div class="card-body">
             <textarea style="width:100%" rows="10" id="jsonData">
               {
-                "deviceId": "Debug1",
+                "deviceId": "YourDeviceId",
+                "apikey": "Your_apikey",
                 "latitude": "32.248814",
                 "longitude": "-110.987419",
                 "uv": "2"
