feat: only allow the email verified user to add a new device.

--- a/iot-server/public/home.html
+++ b/iot-server/public/home.html
@@ -61,6 +61,10 @@
           </div>
           <div class="card-footer" id="addDeviceControl">
             <button id="addDevice" class="btn btn-outline-warning btn-sm" role="button">Add Device</button>
+            <span id="verifyEmailNotice">
+              Confirm the verify email to add a new device. Re-send it?
+              <button class="btn btn-outline-primary btn-sm">Send</button>
+            </span>
           </div>
         </div>
         <div class="alert alert-danger" role="alert" id="error"></div>
