feat: set the layout of weathers.

--- a/iot-server/public/map.html
+++ b/iot-server/public/map.html
@@ -7,23 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="stylesheets/map.css" rel="stylesheet">
     <script src="javascripts/map.js" defer></script>
+    <script src="javascripts/weather.js" defer></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
       <div id="weathers" class="row">
-        <div class="col-3">
-          Today Weather
+        <div id="day0" class="col-6 col-sm-3 text-center">
+          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
+          <span>Wed 25&deg; 10&deg;</span>
         </div>
-        <div class="col-3">
-          Day1 Weather
+        <div id="day1" class="col-6 col-sm-3 text-center">
+          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
+          <span>Wed 25&deg; 10&deg;</span>
         </div>
-        <div class="col-3">
-          Day2 Weather
+        <div id="day2" class="col-6 col-sm-3 text-center">
+          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
+          <span>Wed 25&deg; 10&deg;</span>
         </div>
-        <div class="col-3">
-          Day3 Weather
+        <div id="day3" class="col-6 col-sm-3 text-center">
+          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
+          <span>Wed 25&deg; 10&deg;</span>
         </div>
       </div>
       <div class="row">
