feat: style weathers.

--- a/iot-server/public/map.html
+++ b/iot-server/public/map.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="stylesheets/map.css" rel="stylesheet">
+    <link href="stylesheets/weather.css" rel="stylesheet">
     <script src="javascripts/map.js" defer></script>
     <script src="javascripts/weather.js" defer></script>
     <!-- Bootstrap CSS -->
@@ -15,20 +16,24 @@
     <div class="container">
       <div id="weathers" class="row">
         <div id="day0" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
-          <span>Wed 25&deg; 10&deg;</span>
+          <img src="images/icons/a01d.png"><br>
+          <span>Wed: 25&deg; 10&deg;</span><br>
+          <span>UV index: 2</span>
         </div>
         <div id="day1" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
-          <span>Wed 25&deg; 10&deg;</span>
+          <img src="images/icons/a01d.png"><br>
+          <span>Wed: 25&deg; 10&deg;</span><br>
+          <span>UV index: 2</span>
         </div>
         <div id="day2" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
-          <span>Wed 25&deg; 10&deg;</span>
+          <img src="images/icons/a01d.png"><br>
+          <span>Wed: 25&deg; 10&deg;</span><br>
+          <span>UV index: 2</span>
         </div>
         <div id="day3" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png" style="width: 50%; height: 50%"><br>
-          <span>Wed 25&deg; 10&deg;</span>
+          <img src="images/icons/a01d.png"><br>
+          <span>Wed: 25&deg; 10&deg;</span><br>
+          <span>UV index: 2</span>
         </div>
       </div>
       <div class="row">
