feat: apply dynamic weather data parsing.

--- a/iot-server/public/map.html
+++ b/iot-server/public/map.html
@@ -16,24 +16,24 @@
     <div class="container">
       <div id="weathers" class="row">
         <div id="day0" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png"><br>
-          <span>Wed: 25&deg; 10&deg;</span><br>
-          <span>UV index: 2</span>
+          <img src=""><br>
+          <span></span><br>
+          <span></span>
         </div>
         <div id="day1" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png"><br>
-          <span>Wed: 25&deg; 10&deg;</span><br>
-          <span>UV index: 2</span>
+          <img src=""><br>
+          <span></span><br>
+          <span></span>
         </div>
         <div id="day2" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png"><br>
-          <span>Wed: 25&deg; 10&deg;</span><br>
-          <span>UV index: 2</span>
+          <img src=""><br>
+          <span></span><br>
+          <span></span>
         </div>
         <div id="day3" class="col-6 col-sm-3 text-center">
-          <img src="images/icons/a01d.png"><br>
-          <span>Wed: 25&deg; 10&deg;</span><br>
-          <span>UV index: 2</span>
+          <img src=""><br>
+          <span></span><br>
+          <span></span>
         </div>
       </div>
       <div class="row">
