--- a/iot-server/public/map.html
+++ b/iot-server/public/map.html
@@ -9,10 +9,24 @@
     <link href="stylesheets/weather.css" rel="stylesheet">
     <script src="javascripts/map.js" defer></script>
     <script src="javascripts/weather.js" defer></script>
+    <script src="javascripts/utility.js" defer></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="home.html">SunSmart</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="home.html">Home</a>
+          <a class="nav-item nav-link" href="map.html">Map</a>
+          <a class="nav-item nav-link" href="#" id="signout">Sign Out</a>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div id="weathers" class="row">
         <div id="day0" class="col-6 col-sm-3 text-center">
