feat: provide educational UV index information to the user.

--- a/iot-server/public/home.html
+++ b/iot-server/public/home.html
@@ -19,6 +19,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="home.html">Home</a>
           <a class="nav-item nav-link" href="map.html">Map</a>
+          <a class="nav-item nav-link" href="info.html">Info</a>
           <a class="nav-item nav-link" href="#" id="signout">Sign Out</a>
         </div>
       </div>
