--- a/iot-server/public/map.html
+++ b/iot-server/public/map.html
@@ -23,6 +23,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="home.html">Home</a>
           <a class="nav-item nav-link" href="map.html">Map</a>
+          <a class="nav-item nav-link" href="info.html">Info</a>
           <a class="nav-item nav-link" href="#" id="signout">Sign Out</a>
         </div>
       </div>
