feat: an UV alert on the web application.

--- a/iot-server/public/info.html
+++ b/iot-server/public/info.html
@@ -30,13 +30,21 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <h1>How to Use UV index.</h1>
+          <h1>Alert</h1>
+          <div class="alert" role="alert" id="alert">
+            &nbsp;
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <h3>How to Use UV index.</h3>
           <p>Cited by <a target="_blank" href="https://www.epa.gov/sunsafety/uv-index-scale-1">EPA.gov</a></p>
           <table class="table table-bordered table-responsive">
             <thead>
               <tr>
                 <th scope="col">UV index</th>
-                <th scope="col">Level</th>
+                <th scope="col">Risk Level</th>
                 <th scope="col">Action</th>
               </tr>
             </thead>
