docs: update README

--- a/iot-server/public/info.html
+++ b/iot-server/public/info.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-sm">
           <h3>How to Use UV index.</h3>
-          <p>Cited by <a target="_blank" href="https://www.epa.gov/sunsafety/uv-index-scale-1">EPA.gov</a></p>
+          <p>Cited <a target="_blank" href="https://www.epa.gov/sunsafety/uv-index-scale-1">EPA.gov</a></p>
           <table class="table table-bordered table-responsive">
             <thead>
               <tr>
