--- a/iot-server/public/home.html
+++ b/iot-server/public/home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, Home!</title>
+    <title>SunSmart - Home</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
           <div class="card-body">
             <p>Email: <span id="email"></span></p>
             <p>Name: <span id="fullName"></span></p>
-            <p>Last Access: <span id="lastAccess"></span></p>
+            <!--<p>Last Access: <span id="lastAccess"></span></p>-->
             <a id="editUserInfo" href="#" class="btn btn-outline-warning btn-sm" role="button">Edit</a>
             <div id="confirmEditUserInfo">
               <a href="#" class="btn btn-primary btn-sm" role="button">Done</a>
