--- a/iot-server/public/inputrecord.html
+++ b/iot-server/public/inputrecord.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>JSON POSTer</title>
+    <title>SunSmart - JSON POSTer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
