feat: add developer page.

--- a/iot-server/public/info.html
+++ b/iot-server/public/info.html
@@ -23,6 +23,7 @@
           <a class="nav-item nav-link" href="home.html">Home</a>
           <a class="nav-item nav-link" href="map.html">Map</a>
           <a class="nav-item nav-link" href="info.html">Info</a>
+          <a class="nav-item nav-link" href="developer.html">Developer</a>
           <a class="nav-item nav-link" href="#" id="signout">Sign Out</a>
         </div>
       </div>
