feat: add the template of reset password.

--- a/iot-server/public/signin.html
+++ b/iot-server/public/signin.html
@@ -35,6 +35,9 @@
                 <div class="col">
                   <a id="signin" class="btn btn-outline-primary" href="#" role="button">Sign in</a>
                 </div>
+                <!-- <div class="col">
+                  <div id="account">Forget password? <a href="resetpw.html">Reset it</a></div>
+                </div>-->
                 <div class="col">
                   <div id="account">Need an account? <a href="signup.html">Sign Up</a></div>
                 </div>
